syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.caiotayota.smartwatch.sleepMonitoring";
option java_outer_classname = "SleepMonitoringImpl";

package sleepMonitoring;

// Interface exported by the server.
service SleepMonitoringService {

  // Client streaming
  rpc trackMovement(stream MovementRequest) returns (TotalMovementsResponse);

  rpc trackHeartRate(stream heartRateRequest) returns (stream heartRateResponse);

}

message MovementRequest {
  bool movement = 1;
}

message TotalMovementsResponse {
  string totalMovements = 1;
}

message heartRateRequest {
  int32 heartBeat = 1;
  int32 seconds = 2;
}

message heartRateResponse {
  string heartRate = 1;

}
